--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,16 @@
-<div class="app">
-  <header>
-    <h1>Todo List</h1>
-  </header>
-  <app-todos></app-todos>
+
+<div class="toolbar" role="banner">
+  <span class="name">Undergraduate PMS</span>
+    <div class="spacer"></div>
+    <button class="" [routerLink]="['/completed_project']">Compiled Project</button>
+    <button class="ml-10" [routerLink]="['/project_topics']">Project Topics</button>
+    <div class="spacer"></div>
+    <input type="text" style="width: 20%;" placeholder="Search Projects">
+
+    <div class="spacer"></div>
+    <button class="" [routerLink]="['/login']" *ngIf='!login' (click)="toggle()">Login</button>
+    <button *ngIf='login' (click)="toggle()">Logout</button>
+    <button class="ml-10 mr-10" [routerLink]="['/signup']" *ngIf='!login'>Sign Up</button>
 </div>
+<div class="placeholder"></div>
+<router-outlet class="mb-10"></router-outlet>
