--- a/ProjectPMS/src/app/projects/completed-project/completed-project.component.html
+++ b/ProjectPMS/src/app/projects/completed-project/completed-project.component.html
@@ -1,7 +1,7 @@
 <h2 style="text-align: center;">The table below outline projects already completed</h2>
 
 
-<div class="container" mat-table class="mat-elevation-z8" style="margin-left:10%;
+<div class="card" mat-table class="mat-elevation-z20" style="margin-left:10%;
 margin-right: 10%;">
   <table class="table table-striped" width=100%>
     <thead class="thead">
