--- a/ProjectPMS/src/app/home/home.component.html
+++ b/ProjectPMS/src/app/home/home.component.html
@@ -1,21 +1,78 @@
 
-<p class="ml-10">home works!</p>
-<mat-icon>home</mat-icon>
-<mat-icon>search</mat-icon>
-<mat-icon>settings</mat-icon>
-<mat-icon>account_circle</mat-icon>
-<mat-icon>done</mat-icon>
-<mat-icon>delete_outline visibility logout  schedule manage_accounts verified event dashboard login </mat-icon><br>
-<mat-icon>visibility_off check_circle_outline question_answer close menu cancel more_vert add send notifications password</mat-icon><br>
-<mat-icon>edit school person_add notifications_active mail phone qr_code file_upload file_download upload_file attachment</mat-icon>
-
-a
-
 <div class="container">
-  <app-request-appointment></app-request-appointment>
+<div class="container">
+  <div class="row">
+    <div class="col-md-5 mat-elevation-z20 card" [routerLink]="['/upload_project']">
+      <div>
+        <mat-icon>assignment</mat-icon>
+      </div>
+      <br>
+      <div>
+        <h2>Submit Project Topics</h2>
+        <p>Click to submit the desired topic you wish to work on.</p>
+      </div>
+    </div>
+
+    <div class="col-md-5 mat-elevation-z20 card" [routerLink]="['/upload_chapter']">
+      <div>
+        <mat-icon>add_chart</mat-icon>
+      </div>
+      <br>
+      <div>
+        <h2>Submit Chapter</h2>
+        <p>Submit a complete chapter for supervisor's review</p>
+      </div>
+    </div>
+
+    <div class="col-md-5 mat-elevation-z20 card" [routerLink]="['/view_status']">
+      <div>
+        <mat-icon>announcement</mat-icon>
+      </div>
+      <br>
+      <div>
+        <h2>View Status</h2>
+        <p>Click to view status of all submissions</p>
+      </div>
+    </div>
+
+    <div class="col-md-5 mat-elevation-z20 card" [routerLink]="['/request_appointment']">
+      <div>
+        <mat-icon>schedule</mat-icon>
+      </div>
+      <br>
+      <div>
+        <h2> Request To Meeting</h2>
+        <p>Click to Request for date and time to see your supervisor</p>
+      </div>
+    </div>
+
+    <div class="col-md-5 mat-elevation-z20 card" [routerLink]="['/project_topics']">
+      <div>
+        <mat-icon>dashboard</mat-icon>
+      </div>
+      <br>
+      <div>
+        <h2>View Project Topics</h2>
+        <p>Should you find an interesting topic here, you could send your project proposal with the topic title</p>
+      </div>
+    </div>
+
+    <div class="col-md-5 mat-elevation-z20 card" [routerLink]="['/completed_project']">
+      <div>
+        <mat-icon>school</mat-icon>
+      </div>
+      <br>
+      <div>
+        <h2>Compiled And Submitted Projects</h2>
+        <p>View completed projects by previous students</p>
+      </div>
+    </div>
+  </div>
+  <!-- <app-request-appointment></app-request-appointment>
   <app-view-chapter-status></app-view-chapter-status>
   <app-upload-chapters></app-upload-chapters>
   <app-upload-project-topic></app-upload-project-topic>
   <app-completed-project></app-completed-project>
-  <app-project-topics></app-project-topics>
+  <app-project-topics></app-project-topics> -->
+</div>
 </div>
