--- a/ProjectPMS/src/app/student/upload-chapters/upload-chapters.component.html
+++ b/ProjectPMS/src/app/student/upload-chapters/upload-chapters.component.html
@@ -1,1 +1,24 @@
-<p>upload-chapters works!</p>
+<div class="card mat-elevation-z20" style="min-height: 300px !important;">
+  <h1 style="text-align: center;">Submit Project Topic</h1>
+  <form method="POST" [formGroup]='ProjectChapterForm' (ngSubmit)="publish()">
+     <div class="center">
+        <mat-form-field appearance='outline' style="color: red !important;">
+          <mat-label>Choose Chapter Number</mat-label>
+          <mat-select formControlName='ChapterNumber'>
+            <mat-option *ngFor="let chapter of chapters" [value]='chapter'>
+              {{ chapter }}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
+
+      <input type="file" (change)="readUrl($event)" formControlName='ChapterFile' class="full-width">
+      <img [src]="src" [alt]="src" width="50" height="50" *ngIf="src">
+      <br>
+      <button class="button" mat-button [disabled]="this.ProjectChapterForm.invalid"><mat-spinner *ngIf='loading' [diameter]='30'></mat-spinner><span *ngIf="!loading"><mat-icon>upload_file</mat-icon> Upload Chapter</span></button>
+  </form>
+</div>
+<br>
+<div>
+  {{this.ProjectChapterForm.value | json}}
+</div>
