--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-
+<!--
 <div class="toolbar" role="banner">
   <span class="name">Undergraduate PMS</span>
     <div class="spacer"></div>
@@ -12,8 +12,41 @@
     <div class="spacer"></div>
     <button class="" [routerLink]="['/login']" ngbTooltip='Login'><mat-icon matPrefix>login</mat-icon></button>
     <button ngbTooltip='Logout'><mat-icon>logout</mat-icon></button>
-    <button class="ml-10 mr-10" [routerLink]="['/user']" ngbTooltip='Sign Up'><mat-icon>person_add</mat-icon><!--Sign Up--></button>
-</div>
+    <button class="ml-10 mr-10" [routerLink]="['/user']" ngbTooltip='Sign Up'><mat-icon>person_add</mat-icon></button>
+</div> -->
+
+<nav class="navbar navbar-expand-lg toolbar">
+  <a class='' [routerLink]="'/'">Undergraduate PMS</a>
+  <div class="spacer"></div>
+  <input type="text" style="width: 20%;" placeholder="Search Projects">
+  <div class="spacer"></div>
+  <button class='navbar-toggler' type="button" (click)='isMenuCollapsed = !isMenuCollapsed'><span *ngIf="isMenuCollapsed"> &#9776;</span> <span *ngIf="!isMenuCollapsed"> X </span> </button>
+  <div class="spacer"></div>
+  <div [ngbCollapse]='isMenuCollapsed' class='collapse navbar-collapse'>
+    <ul class="navbar-nav">
+      <li class="nav-item active" style="margin-bottom: 15px;">
+        <button class="mt-10 ml-10 mr-10" [routerLink]="['/update_profile']" ngbTooltip='Update Profile' (click)='isMenuCollapsed =true'><mat-icon>person</mat-icon></button>
+      </li>
+      <div class="spacer"></div>
+      <li class="nav-item" style="margin-bottom: 15px;">
+        <button class="mt-10 ml-10 mr-10" ngbTooltip='Download Project Guidelines' (click)='isMenuCollapsed =true'><a href="http://localhost:8000/media/failFast.pdf"></a><mat-icon>download</mat-icon></button>
+      </li>
+      <div class="spacer"></div>
+      <li class="nav-item" style="margin-bottom: 15px;">
+        <button class="mt-10 ml-10 mr-10" [routerLink]="['/login']" ngbTooltip='Login' (click)='isMenuCollapsed =true'><mat-icon matPrefix>login</mat-icon></button>
+      </li>
+      <div class="spacer"></div>
+      <li class="nav-item" style="margin-bottom: 15px;">
+        <button class="mt-10 ml-10 mr-10" ngbTooltip='Logout' (click)='isMenuCollapsed =true'><mat-icon>logout</mat-icon></button>
+      </li>
+      <div class="spacer"></div>
+      <li class="nav-item">
+        <button class="mt-10 ml-10 mr-10" [routerLink]="['/user']" ngbTooltip='Sign Up' (click)='isMenuCollapsed =true'><mat-icon>person_add</mat-icon></button>
+      </li>
+    </ul>
+  </div>
+</nav>
+
 <div class="placeholder"></div>
 <div class="container">
   <div class="container">
