--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,19 +24,19 @@
   <div class="spacer"></div>
   <div [ngbCollapse]='isMenuCollapsed' class='collapse navbar-collapse'>
     <ul class="navbar-nav">
-      <li class="nav-item active" style="margin-bottom: 15px;">
+      <li class="nav-item active">
         <button class="mt-10 ml-10 mr-10" [routerLink]="['/update_profile']" ngbTooltip='Update Profile' (click)='isMenuCollapsed =true'><mat-icon>person</mat-icon></button>
       </li>
       <div class="spacer"></div>
-      <li class="nav-item" style="margin-bottom: 15px;">
+      <li class="nav-item">
         <button class="mt-10 ml-10 mr-10" ngbTooltip='Download Project Guidelines' (click)='isMenuCollapsed =true'><a href="http://localhost:8000/media/failFast.pdf"></a><mat-icon>download</mat-icon></button>
       </li>
       <div class="spacer"></div>
-      <li class="nav-item" style="margin-bottom: 15px;">
+      <li class="nav-item">
         <button class="mt-10 ml-10 mr-10" [routerLink]="['/login']" ngbTooltip='Login' (click)='isMenuCollapsed =true'><mat-icon matPrefix>login</mat-icon></button>
       </li>
       <div class="spacer"></div>
-      <li class="nav-item" style="margin-bottom: 15px;">
+      <li class="nav-item">
         <button class="mt-10 ml-10 mr-10" ngbTooltip='Logout' (click)='isMenuCollapsed =true'><mat-icon>logout</mat-icon></button>
       </li>
       <div class="spacer"></div>
