Home router link

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,7 @@
 </div> -->
 
 <nav class="navbar navbar-expand-lg toolbar">
-  <a class='' [routerLink]="'/'">Undergraduate PMS</a>
+  <span [routerLink]="'/'" style="cursor:pointer">Undergraduate PMS</span>
   <div class="spacer"></div>
   <input type="text" style="width: 20%;" placeholder="Search Projects">
   <div class="spacer"></div>
