--- a/src/app/student/view-chapter-status/view-chapter-status.component.html
+++ b/src/app/student/view-chapter-status/view-chapter-status.component.html
@@ -1,1 +1,34 @@
-<p>view-chapter-status works!</p>
+<div class="container">
+  <div class="container">
+    <div class="mat-elevation-z20" style="display: flex; border-radius: 10px; padding-left: 10px; height: 50px; align-items: center; margin: 20px">
+      <span style="font-weight: 700;">Topic Submission Status</span>
+      <div class="spacer"></div>
+      <mat-icon style="margin-right: 10px;">done</mat-icon>
+    </div>
+    <div class="mat-elevation-z20" style="display: flex; border-radius: 10px; padding-left: 10px; height: 50px; align-items: center; margin: 20px">
+      <span style="font-weight: 700;">Chapter1 Submission Status</span>
+      <div class="spacer"></div>
+      <mat-icon style="margin-right: 10px;">done</mat-icon>
+    </div>
+    <div class="mat-elevation-z20" style="display: flex; border-radius: 10px; padding-left: 10px; height: 50px; align-items: center; margin: 20px">
+      <span style="font-weight: 700;">Chapter2 Submission Status</span>
+      <div class="spacer"></div>
+      <mat-icon style="margin-right: 10px;">pending_actions</mat-icon>
+    </div>
+    <div class="mat-elevation-z20" style="display: flex; border-radius: 10px; padding-left: 10px; height: 50px; align-items: center; margin: 20px">
+      <span style="font-weight: 700;">Chapter3 Submission Status</span>
+      <div class="spacer"></div>
+      <mat-icon style="margin-right: 10px;">pending_actions</mat-icon>
+    </div>
+    <div class="mat-elevation-z20" style="display: flex; border-radius: 10px; padding-left: 10px; height: 50px; align-items: center; margin: 20px">
+      <span style="font-weight: 700;">Chapter4 Submission Status</span>
+      <div class="spacer"></div>
+      <mat-icon style="margin-right: 10px;">close</mat-icon>
+    </div>
+    <div class="mat-elevation-z20" style="display: flex; border-radius: 10px; padding-left: 10px; height: 50px; align-items: center; margin: 20px">
+      <span style="font-weight: 700;">Chapter5 Submission Status</span>
+      <div class="spacer"></div>
+      <mat-icon style="margin-right: 10px;">close</mat-icon>
+    </div>
+  </div>
+</div>
