--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,7 +20,12 @@
   <div class="spacer"></div>
   <input type="text" style="width: 20%;" placeholder="Search Projects">
   <div class="spacer"></div>
-  <button class='navbar-toggler' type="button" (click)='isMenuCollapsed = !isMenuCollapsed'><span *ngIf="isMenuCollapsed"> &#9776;</span> <span *ngIf="!isMenuCollapsed"> X </span> </button>
+  <div class="spacer"></div>
+  <div class="spacer"></div>
+  <div class="spacer"></div>
+  <div class="spacer"></div>
+  <div class="spacer"></div>
+  <button class='navbar-toggler' type="button" style="border-color: transparent;" (click)='isMenuCollapsed = !isMenuCollapsed'><span *ngIf="isMenuCollapsed"> &#9776;</span> <span *ngIf="!isMenuCollapsed"> X </span> </button>
   <div class="spacer"></div>
   <div [ngbCollapse]='isMenuCollapsed' class='collapse navbar-collapse'>
     <ul class="navbar-nav">
