--- a/src/app/student/upload-project-topic/upload-project-topic.component.html
+++ b/src/app/student/upload-project-topic/upload-project-topic.component.html
@@ -1,18 +1,30 @@
 <div class="card mat-elevation-z20" style="min-height: 300px !important;">
   <h1 style="text-align: center;">Submit Project Topic</h1>
   <form [formGroup]='proposalForm' method="POST">
-      <mat-form-field [draggable]='true' appearance='legacy' class="full-width">
-        <mat-label>Project Topic Name</mat-label>
-        <input matInput formControlName='Topic' placeholder="Design and Implementation">
-        <mat-icon matSuffix>edit</mat-icon>
-      </mat-form-field><br>
+    <div class="center">
+      <mat-form-field appearance='outline'>
+        <mat-label>Choose Lecturer</mat-label>
+        <mat-select formControlName='Lecturer'>
+          <mat-option *ngFor="let lecturer of lecturers" [value]='lecturer'>
+            {{ lecturer }}
+          </mat-option>
+        </mat-select>
+        <mat-error *ngIf="this.proposalForm.get('Lecturer')?.hasError('required')">Required Field must be selected</mat-error>
+      </mat-form-field>
+    </div>
 
-      <div>
-        <input type="file" (change)="readUrl($event)" formControlName='Abstract' class="full-width">
-        <img [src]="src" [alt]="src" width="50" height="50" *ngIf="src">
-      </div>
-      <br>
-      <button class="button" mat-button [disabled]="this.proposalForm.invalid"><mat-icon>file_upload</mat-icon> Upload Topic</button>
+    <mat-form-field [draggable]='true' appearance='legacy' class="full-width">
+      <mat-label>Project Topic Name</mat-label>
+      <input matInput formControlName='Topic' placeholder="Design and Implementation">
+      <mat-icon matSuffix>edit</mat-icon>
+    </mat-form-field><br>
+
+    <div>
+      <input type="file" (change)="readUrl($event)" formControlName='Abstract' class="full-width">
+      <img [src]="src" [alt]="src" width="50" height="50" *ngIf="src">
+    </div>
+    <br>
+    <button class="button" mat-button [disabled]="this.proposalForm.invalid"><mat-icon>file_upload</mat-icon> Upload Topic</button>
   </form>
 </div>
 <br>
