--- a/src/app/supervisor/supervisor.component.html
+++ b/src/app/supervisor/supervisor.component.html
@@ -1,25 +1,14 @@
 <div class="container">
   <div class="container">
     <div class="row">
-      <div class="col-md-5 mat-elevation-z20 card" [routerLink]="['/supervisor/review']">
-        <div>
-          <mat-icon>assignment</mat-icon>
-        </div>
-        <br>
-        <div>
-          <h2>Submit Project Topics</h2>
-          <p>Click to submit the desired topic you wish to work on.</p>
-        </div>
-      </div>
-
       <div class="col-md-5 mat-elevation-z20 card" [routerLink]="['/supervisor/make_appointment']">
         <div>
           <mat-icon>add_chart</mat-icon>
         </div>
         <br>
         <div>
-          <h2>Submit Chapter</h2>
-          <p>Submit a complete chapter for supervisor's review</p>
+          <h2>Send Invitation</h2>
+          <p>Send An Invitation to a Student</p>
         </div>
       </div>
 
@@ -29,7 +18,7 @@
         </div>
         <br>
         <div>
-          <h2>View Status</h2>
+          <h2>Submit Project Topics</h2>
           <p>Click to view status of all submissions</p>
         </div>
       </div>
@@ -44,6 +33,18 @@
           <p>View completed projects by previous students</p>
         </div>
       </div>
+
+      <div class="col-md-5 mat-elevation-z20 card" [routerLink]="['/supervisor/review']">
+        <div>
+          <mat-icon>assignment</mat-icon>
+        </div>
+        <br>
+        <div>
+          <h2>Submit Project Topics</h2>
+          <p>Click to submit the desired topic you wish to work on.</p>
+        </div>
+      </div>
+
     </div>
   </div>
 </div>
