--- a/src/app/student/request-appointment/request-appointment.component.html
+++ b/src/app/student/request-appointment/request-appointment.component.html
@@ -1,15 +1,31 @@
 <h2 style="text-align: center;">Send Visitation Request For Your Supervisor</h2>
 <div class="card mat-elevation-z20">
-  <form  [formGroup]='reqForm' (ngSubmit)='save()' >
-    <mat-form-field [draggable]='true' appearance='legacy' class="full-width">
+  <form  [formGroup]='reqForm' (ngSubmit)='save()'>
+    <div class="center">
+      <mat-form-field appearance='outline'>
+        <mat-label>Select Your Lecturer</mat-label>
+        <mat-select formControlName='Lecturer'>
+          <mat-option *ngFor="let lecturer of lecturers" [value]='lecturer'>
+            {{ lecturer }}
+          </mat-option>
+        </mat-select>
+        <mat-error *ngIf="this.reqForm.get('Lecturer')?.hasError('required')">Required field cannot be blank</mat-error> 
+      </mat-form-field>
+    </div>
+    <mat-form-field [draggable]='true' appearance='outline' class="full-width">
       <mat-label>Choose a Date</mat-label>
-      <input matInput formControlName='picker' placeholder="(dd/mm/yyyy)">
+      <input matInput formControlName='Date' placeholder="(dd/mm/yyyy)">
       <mat-icon matSuffix>event</mat-icon>
+      <mat-error *ngIf="this.reqForm.get('Date')?.hasError('required')">Required field cannot be blank</mat-error> 
+      <mat-error *ngIf="this.reqForm.get('Date')?.hasError('minlength')">Character length cannot be less than 8, seperate with '/ or -'</mat-error> 
+      <mat-error *ngIf="this.reqForm.get('Date')?.hasError( 'maxlength')">Character length must not exceed 10, seperate with '/ or -'</mat-error>
     </mat-form-field>
     <mat-form-field [draggable]='true' appearance='outline' class="full-width">
       <mat-label>Pick a Time</mat-label>
-      <input matInput formControlName='time'>
+      <input matInput formControlName='Time'>
       <mat-icon matSuffix>schedule</mat-icon>
+      <mat-error *ngIf="this.reqForm.get('Time')?.hasError('required')">Required filed cannot be blank</mat-error> 
+      <mat-error *ngIf="this.reqForm.get('Time')?.hasError('minlength') || this.reqForm.get('Time')?.hasError( 'maxlength')">Character length must be exactly 5, seperate with ': or -'</mat-error>
     </mat-form-field>
     <button class="button" mat-button [disabled]="this.reqForm.invalid">
       <mat-spinner *ngIf='loading' [diameter]='30'></mat-spinner>
