--- a/src/app/supervisor/supervisor.component.html
+++ b/src/app/supervisor/supervisor.component.html
@@ -29,8 +29,8 @@
         </div>
         <br>
         <div>
-          <h2>Compiled And Submitted Projects</h2>
-          <p>View completed projects by previous students</p>
+          <h2>Student List</h2>
+          <p>View List of Project Student Assigned To You</p>
         </div>
       </div>
 
@@ -40,8 +40,8 @@
         </div>
         <br>
         <div>
-          <h2>Submit Project Topics</h2>
-          <p>Click to submit the desired topic you wish to work on.</p>
+          <h2>Make Reviews</h2>
+          <p>Review Project Proposal Topics and Chapters Sent By Your Assigned Students</p>
         </div>
       </div>
 
